--- a/html/template_infinity_1.html
+++ b/html/template_infinity_1.html
@@ -2,7 +2,7 @@
 <div class="custom-gaming col-3-3 center"
   style="background-image: url('https://media.komputronik.pl/pl-komputronik/img/opisy_produktow/content/PC/baner-infinity.jpg'); height:535px; align-content: flex-end;">
   <h3 class="size-7" style="color:#fff; text-transform: uppercase;">
-    Komputronik Infinity X510 [R1]
+    MODELNAME
   </h3>
 </div>
 <!--end banner-->
@@ -13,9 +13,9 @@
 </div>
 <div class="col-4-6 center">
   <p>
-  TEXT1
+  GENERALTEXT1
   <p>
-  TEXT2
+  GENERALTEXT2
   </p>
 </div>
 <div class="col-1-6">
