wrote a guide for developing features

--- a/html/infinity.html
+++ b/html/infinity.html
@@ -1,7 +1,9 @@
 ﻿<!-- main banner-->
 <div class="custom-gaming col-3-3 center" style="background-image: url('https://media.komputronik.pl/pl-komputronik/img/opisy_produktow/content/PC/baner-infinity.jpg'); height:535px; align-content: flex-end;">
 <h3 class="size-7" style="color:#fff; text-transform: uppercase;">
-Komputronik Infinity X510 [R1]
+
+PRODUCT_HEADER1
+
 </h3>
 </div>
 <!--end banner-->
@@ -11,10 +13,12 @@ Komputronik Infinity X510 [R1]
 <div class="col-1-6">
 </div>
 <div class="col-4-6 center">
-<p />
-Komputronik Infinity to seria z tradycją. Nasze wieloletnie doświadczenie w projektowaniu i budowaniu komputerów dla graczy czyni je wyjątkową propozycją dla każdego. Wszystkie przygotowane konstrukcje cechuje optymalny dobór markowych podzespołów, aby móc zaoferować najwyższą wydajność w danym przedziale cenowym. 
 <p>
-Komputronik Infinity X510 [R] to całkiem wydajna maszyna pozwalająca zagrać w praktycznie każdą grę na wysokich ustawieniach w rozdzielczości FHD (1080p). Połączenie wydajnego Core i5 10. generacji z wyjątkowo udanym GeForce RTX 3060 12 GB gwarantuje odpowiedni zapas wydajności, jednocześnie dając już dostęp do nowoczesnych technologii, takich jak NVIDIA DLSS. Wysokiej jakości, kompaktowa, ale również dobrze wentylowana obudowa zmieści się nawet na małym biurku. To wyśmienity zestaw do rozpoczęcia przygody z graniem na PC.
+MAIN_PARAGRAPH1
+
+</p>
+<p>
+MAIN_PARAGRAPH2
 </p>
 </div>
 <div class="col-1-6">
@@ -24,28 +28,28 @@ Komputronik Infinity X510 [R] to całkiem wydajna maszyna pozwalająca zagrać w
 
 
 <div class="col-3-3 custom-gaming col-no-pad center">
-<div class="col-2-4 even col-no-pad" style="background-image:url(https://media.komputronik.pl/pl-komputronik/img/opisy_produktow/content/PC/Infinity_X510_R/procesor.jpg);">
+<div class="col-2-4 even col-no-pad" style="background-image:url(https://media.komputronik.pl/pl-komputronik/img/opisy_produktow/content/PC/SERIES_MODEL/procesor.jpg);">
 <div class="col-3-3 center">
-<img src="https://media.komputronik.pl/pl-komputronik/img/opisy_produktow/content/PC/icons/procesor-intel-i5.svg" class="center icon non-radius" alt="" />
+<img src="https://media.komputronik.pl/pl-komputronik/img/opisy_produktow/content/PC/icons/procesor.svg" class="center icon non-radius" alt="" />
 <h3 class="size-5">
-Procesor Intel Core i5-10400F
+PROCESOR_HEADER
 </h3>
 <p>
-Sukces, jaki na rynku odniósł model Intel Core i5-10400F, najlepiej ukazuje to, że nadal jest najchętniej wybieranym procesorem dla zestawów PC ze średniego segmentu. Dzięki 6 rdzeniom i 12 wątkom oraz odświeżonej architekturze Comet Lake-S (taktowanie do 4.3 GHz) nadal świetnie radzi sobie nawet w najnowszych grach. To idealnie dobrany (pod względem wydajności) procesor do obecnego w Infinity X510 [R] GeForce RTX 3060. 
-</p>
+PROCESOR_PARAGRAPH</p>
 </div></div>
 
 
 
-<div class="col-2-4 odd col-no-pad" style="background-image:url(https://media.komputronik.pl/pl-komputronik/img/opisy_produktow/content/PC/Infinity_X510_R/grafika.jpg);">
+<div class="col-2-4 odd col-no-pad" style="background-image:url(https://media.komputronik.pl/pl-komputronik/img/opisy_produktow/content/PC/SERIES_MODEL/grafika.jpg);">
 <div class="col-3-3 center">
 <img src="https://media.komputronik.pl/pl-komputronik/img/opisy_produktow/content/PC/icons/gpu.svg" class="center icon non-radius" style="" alt="" />
 <h3 class="size-5">
-Karta graficzna NVIDIA GeForce RTX&nbsp;3060&nbsp;12GB
+GPU_HEADER
 </h3>
 
 <p>
-Zastosowana w Komputronik Infinity X510 [R] karta graficzna to przedstawiciel nadal najświeższej serii NVIDIA GeForce RTX 3000. Jest to mocniejsza odmiana tej karty (z większą liczbą procesorów CUDA) i posiada 12 GB własnej pamięci GDDR6, co idealnie sprawdzi się w połączeniu z monitorem Full HD, ale również pozwoli zachować wysoką płynność przy graniu w wyższych rozdzielczościach. Karta wspiera już techniki, takie jak DLSS 2 i posiada wydajny enkoder wideo, na wypadek gdybyśmy chcieli rozgrywkę nagrywać lub streamować. Wydajne chłodzenie karty pozwala zachować wysoką kulturę pracy całego zestawu.
+GPU_PARAGRAPH
+
 </p>
 
 </div></div>
@@ -56,30 +60,30 @@ Zastosowana w Komputronik Infinity X510 [R] karta graficzna to przedstawiciel na
 
 <!-- infinity - column -->
 <div class="col-3-3 custom-gaming col-no-pad center">
-<div class="col-2-4 even col-no-pad" style="background-image:url(https://media.komputronik.pl/pl-komputronik/img/opisy_produktow/content/PC/Infinity_X510_R/ssd-m2.jpg);">
+<div class="col-2-4 even col-no-pad" style="background-image:url(https://media.komputronik.pl/pl-komputronik/img/opisy_produktow/content/PC/SERIES_MODEL/ssd-m2.jpg);">
 <div class="col-3-3 center">
 <img src="https://media.komputronik.pl/pl-komputronik/img/opisy_produktow/content/PC/icons/ssd-m2.svg" class="center icon non-radius" alt="" />
 <h3 class="size-5">
-Dysk SSD M.2 o pojemności 1 TB
+SSD_HEADER
 </h3>
 
 <p>
-Dysk SSD, w jaki wyposażono zestaw Komputronik Infinity X510 [R], korzysta z protokołu NVMe oraz z nadal bardzo świeżego interfejsu PCI-E 4.0. Oznacza to, że o rząd wielkości przewyższa prędkością dyski SSD z interfejsem SATA, co wyraźnie czuć podczas nagrywania rozgrywki, ale również zwykłego użytkowania, np. podczas wczytywania się gier (zwłaszcza tych najnowszych, korzystających z API Microsoft DirectStorage – na takim dysku ładowanie trwa dosłownie ułamek sekundy). Pojemność 1 TB zapewnia komfort użytkowania komputera – pomieści nie tylko system i oprogramowanie wraz z kolejnymi ich aktualizacjami, ale również kilka najnowszych gier, które zajmują coraz więcej przestrzeni.
+SSD_PARAGRAPH
 </p>
 
 </div></div>
 
 
 
-<div class="col-2-4 odd col-no-pad" style="background-image:url(https://media.komputronik.pl/pl-komputronik/img/opisy_produktow/content/PC/Infinity_X510_R/ram.jpg);">
+<div class="col-2-4 odd col-no-pad" style="background-image:url(https://media.komputronik.pl/pl-komputronik/img/opisy_produktow/content/PC/SERIES_MODEL/ram.jpg);">
 <div class="col-3-3 center">
 <img src="https://media.komputronik.pl/pl-komputronik/img/opisy_produktow/content/PC/icons/ddr4.svg" class="center icon non-radius" style="" alt="" />
 <h3 class="size-5">
-Pamięć operacyjna – 16&nbsp;GB&nbsp;2666&nbsp;MHz&nbsp;w&nbsp;dwóch&nbsp;kościach
+RAM_HEADER
 </h3>
 
 <p>
-Pamięć operacyjna (RAM) pośredniczy w komunikacji między procesorem a innymi podzespołami – jej wydajność jest kluczowa dla osiągnięcia pełnego potencjału komputera. Komputronik Infinity X510 [R] w tym wariancie wyposażono w dwie kości o pojemności 8 GB każda, dzięki czemu pracują one w trybie dwukanałowym (Dual Channel), co podwaja ich przepustowość. Taktowane są z najwyższą częstotliwością, dostępną dla zastosowanego procesora i płyty głównej.
+RAM_PARAGRAPH
 </p>
 
 </div></div>
@@ -93,14 +97,13 @@ Pamięć operacyjna (RAM) pośredniczy w komunikacji między procesorem a innymi
 <div class="col-2-4 odd cc-mobile-1">
 <img src="https://media.komputronik.pl/pl-komputronik/img/opisy_produktow/content/PC/icons/plyta-glowna.svg" class="center icon non-radius" style="" alt="" />
 <h3 class="size-5">
-Płyta główna Gigabyte H510M H
+MOTHERBOARD_HEADER
 </h3>
 <p>
-Zastosowany tu model płyty głównej dobrano tak, aby nie podnosić ceny zbędnymi zwykle dodatkami. Pamięci w razie rozbudowy będzie trzeba wymienić, podobnie jak dołożyć możemy jedynie dyski SATA. Mimo to w płycie nie zabrakło sterowania podświetleniem RGB, gdybyśmy w takie dodatki komputer chcieli w przyszłości doposażyć. Płyta ta, mimo iż wygląda niepozornie, w praktyce obsłuży również procesory, takie jak Intel Core i7 11. generacji, gdyby zaszła taka potrzeba. 
-</p>
+MOTHERBOARD_PARAGRAPH</p>
 </div>
 <div class="col-2-4 cc-mobile-2">
-<img src="https://media.komputronik.pl/pl-komputronik/img/opisy_produktow/content/PC/Infinity_X510_R/plyta-glowna.jpg" class="right non-radius" alt="" />
+<img src="https://media.komputronik.pl/pl-komputronik/img/opisy_produktow/content/PC/SERIES_MODEL/plyta-glowna.jpg" class="right non-radius" alt="" />
 </div></div>
 <!--koniec-img prawy-->
 
@@ -109,16 +112,16 @@ Zastosowany tu model płyty głównej dobrano tak, aby nie podnosić ceny zbędn
 <!--img lewy-->
 <div class="col-3-3 custom-gaming2 center">
 <div class="col-2-4 cc-mobile-2">
-<img src="https://media.komputronik.pl/pl-komputronik/img/opisy_produktow/content/PC/Infinity_X510_R/zasilacz.jpg" class="left non-radius" alt="" />
+<img src="https://media.komputronik.pl/pl-komputronik/img/opisy_produktow/content/PC/SERIES_MODEL/zasilacz.jpg" class="left non-radius" alt="" />
 </div>
 <div class="col-2-4 even cc-mobile-1">
 <img src="https://media.komputronik.pl/pl-komputronik/img/opisy_produktow/content/PC/icons/zasilacz.svg" class="center icon non-radius" style="" alt="" />
 <h3 class="size-5">
-Zasilacz 550 W z&nbsp;certyfikatem&nbsp;80+&nbsp;Bronze
+POWER_HEADER
 </h3>
 
 <p>
-Markowy zasilacz to nie tylko stabilna praca, ale również bezpieczeństwo pozostałych podzespołów. Komputronik Infinity X510 [R] wyposażamy tylko w zasilacze z certyfikatem 80+ Bronze i to tylko producentów, do których mamy zaufanie. Oferują pełen zestaw zabezpieczeń prądowych oraz napięciowych, zatem nie musimy obawiać się o bezpieczeństwo pozostałych podzespołów. W obecnej konfiguracji moc 550 W oferuje dodatkowy zapas na ewentualną przyszłą rozbudowę komputera o znacznie mocniejszą kartę graficzną, ale również o więcej dysków lub pamięci.
+POWER_PARAGRAPH
 </p>
 
 </div>
@@ -132,16 +135,15 @@ Markowy zasilacz to nie tylko stabilna praca, ale również bezpieczeństwo pozo
 <div class="col-2-4 odd cc-mobile-1">
 <img src="https://media.komputronik.pl/pl-komputronik/img/opisy_produktow/content/PC/icons/obudowa-pc.svg" class="center icon non-radius" style="" alt="" />
 <h3 class="size-5">
-Obudowa KRUX Cella
+CASE_HEADER
 </h3>
 
 <p>
-Infinity X510 [R] zbudowaliśmy w oparciu o nowoczesną i wyjątkowo zgrabną obudowę typu microTower – KRUX Cella. W modelu tym, pochodzącym od polskiej firmy, odnajdziemy wszystko, na czym obecnie w obudowach może nam zależeć. Konstrukcję wyposażono w obszerną piwnicę (na zasilacz, dyski i przewody), boczny panel wykonano ze szkła hartowanego, a na szczycie odnajdziemy aż trzy złącza USB (w tym jedno w standardzie USB 3.2) oraz zestaw złączy audio. Obudowa ta jest również wyśmienicie wentylowana, dzięki zastosowaniu frontu typu mesh oraz 120-milimetrowego wentylatora. W przyszłości bez problemu możemy tutaj zamontować chłodzenie cieczą typu AiO 240 mm lub całą obudowę obsadzić łącznie pięcioma wentylatorami 120 mm.
-</p>
+CASE_PARAGRAPH</p>
 
 </div>
 <div class="col-2-4 cc-mobile-2">
-<img src="https://media.komputronik.pl/pl-komputronik/img/opisy_produktow/content/PC/Infinity_X510_R/obudowa.jpg" class="right non-radius" alt="" />
+<img src="https://media.komputronik.pl/pl-komputronik/img/opisy_produktow/content/PC/SERIES_MODEL/obudowa.jpg" class="right non-radius" alt="" />
 </div></div>
 <!--koniec-img prawy-->
 
